--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
         <link rel="stylesheet" href="css/game.css" type="text/css" />
-        <script src="js/phaser-arcade-physics.min.js"></script>
+        <script src="js/modules/phaser-arcade-physics.min.js"></script>
     </head>
     <body>
-        <script src="js/game.js"></script>
     </body>
+	<script type="module" src="js/game.js"></script>
 </html>
